# 2dshooter

./: .gitmodules  CMakeLists.txt
cmake/: toolchain-angstrom-arm.cmake
img/: red_guy.xcf  right_hand.xcf
levels/: commando1.qmlon  test.qmlon  test.txt
lib/: CMakeLists.txt
lib/framework/: CMakeLists.txt
lib/framework/include/: framework.h
lib/framework/src/engine/: engine.cpp  engine.h
lib/framework/src/graphics/: image.cpp  image.h  shapes.cpp  shapes.h  sprite.cpp  sprite.h
lib/framework/src/platform/: dlWindow.h  gl.h
lib/framework/src/util/: interval.h  log.cpp  log.h  quad.cpp  quad.h  rect.h  screen.cpp  screen.h  segment.cpp  segment.h  segmenttree.cpp  segmenttree.h  transformation.cpp  transformation.h  vec2d.cpp  vec2d.h
lib/framework/src/world/: entity.cpp  entity.h  world.cpp  world.h
proto/2dshooter-javascript/: 2dshooter.css  2dshooter.js  engine.js  entities.js  index.html  segment.js  shooterstate.js  util.js
puppets/: commando.qmlon  stickman.qmlon
skeletons/: human.qmlon
spritesheets/: commando.qmlon  grass.qmlon  stickman.qmlon
src/: animation.h  bullet.cpp  bullet.h  compoundanimation.cpp  compoundanimation.h  ease.cpp  ease.h  gamestate.cpp  gamestate.h  gameworld.cpp  gameworld.h  human.cpp  human.h  input.cpp  input.h  level.cpp  level.h  levelterrain.cpp  levelterrain.h  main.cpp  movingentity.cpp  movingentity.h  pandoranub.cpp  pandoranub.h  parallaxbackground.cpp  parallaxbackground.h  parallelanimation.cpp  parallelanimation.h  pauseanimation.cpp  pauseanimation.h  player.cpp  player.h  puppet.cpp  puppet.h  puppetentity.cpp  puppetentity.h  segmentgroup.cpp  segmentgroup.h  sequentialanimation.cpp  sequentialanimation.h  (+26 more)
src/util/: interval.cpp  interval.h  polygon.cpp  polygon.h  rect.cpp  rect.h  segment.cpp  segment.h  segmenttree.cpp  segmenttree.h  transformation.cpp  transformation.h  triangle.cpp  triangle.h  vec2d.cpp  vec2d.h
terrains/: background-dirt.qmlon  grass.qmlon  grassplatform.qmlon  underground.qmlon
test/: CMakeLists.txt  test_vec2d.cpp
